trees.css
#map {
    position: relative;
    top: 0;
    bottom: 0;
    width: 100%;
  }

.m-color-white {
    color:#E4E4E4 !important;
  }

.map-overlay {
position: absolute;
bottom: 0;
right: 0;
background: rgba(255, 255, 255, 0.8);
margin-right: 20px;
font-family: Arial, sans-serif;
overflow: auto;
border-radius: 3px;
}

#legend {
padding: 10px;
box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
line-height: 18px;
height: 80px;
left: 20px;
margin-bottom: 40px;
width: 160px;
}

.legend-key {
display: inline-block;
border-radius: 20%;
width: 10px;
height: 10px;
margin-right: 5px;
}



.column {
  float: left;
  width: 25%;
}

/* Clear floats after the columns */
.row:after {
  content: "";
  display: table;
  clear: both;
}


.ui.fixed.sticky + p {
	margin-top: 39px;
  }


#nav {
	border-bottom: 10px !important;
	border-color: #76AD3A !important;
	border: #76AD3A !important;
}

#logo {
	width: 60px;
	height: 60px;
}

#title {
	font-family:sans-serif;
	font-size: larger;
}
.active_map {
	background-color: green !important;
}

